# scriptcwl

./: .codacy.yml  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  codemeta.json  meta.yaml  requirements.txt  setup.cfg  setup.py  tmp.py  tox.ini
.eggs/: pytest_runner-3.0-py2.7.egg
docs/: Makefile  adding_outputs.rst  adding_workflow_steps.rst  conf.py  cwl_tips_tricks.rst  enable_logging.rst  examples.rst  index.rst  installation.rst  listing_steps.rst  loading_steps.rst  make.bat  nlppln_anonymize.rst  printing_workflows.rst  saving_workflows.rst  setting_documentation.rst  useful_tools.rst  user_manual.rst  workflow_inputs.rst
docs/_templates/: sidebarintro.html
scriptcwl/: __init__.py  library.py  reference.py  scriptcwl.py  step.py  workflow.py  yamlmultiline.py  yamlutils.py
scriptcwl/examples/: add.cwl  add.py  add_multiply_example.cwl  multiply.cwl  multiply.py
tests/: test_library.py  test_lint.py  test_scriptcwl.py  test_step.py  test_workflow.py  test_yamlmultiline.py  test_yamlutils.py
tests/data/: echo-no-shebang.cwl  echo-wc.workflowstep.cwl  echo.scattered.cwl
tests/data/misc/: echo2.cwl  echo3.cwl  non-python-names.cwl
tests/data/tools/: echo.cwl  multiple-out-args.cwl  wc.cwl
tests/data/workflows/: echo-wc.cwl  echo-wc_inline.cwl  echo-wc_wd.cwl
wftool/: __init__.py  step.py  wftool.py  workflow.py
